[package]
name = "rustlua"
version = "0.1.0"
edition = "2024"

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.99"
log = "0.4.27"
mlua = { version = "0.11.2", features = ["lua54", "vendored", "anyhow"] }

[build-dependencies]
bindgen = "0.72.0"
