[package]
name = "rustlua"
version = "0.1.0"
edition = "2024"

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
libflate = "2.1.0"
log = "0.4.28"
mlua = { version = "0.11.3", features = ["lua54", "vendored", "anyhow"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[build-dependencies]
bindgen = "0.72.1"
